--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyScheduler">
-        <activity android:name=".character"></activity>
+        <activity
+            android:name=".character_main"
+            android:label="@string/title_activity_character_main"></activity>
+        <activity android:name=".character" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
